# CudaSift

./: CMakeLists.txt
demo/: geomFuncs.cpp  mainSift.cpp
include/cudaSift/: cudaSift.h  cudaSiftH.h  image.h  sift.h  sift_device.h  sift_host.h  utils.h
src/: cudaImage.cu  cudaSiftD.cu  cudaSiftH.cu  image.cu  matching.cu  sift_device.cu  sift_host.cu
